# parastore-kit

./: .gitignore  AGENTS.md  LICENSE  LICENSES-BACKEND.md  README.md  USAGE.md
backend/: .env.example  pyproject.toml
backend/sample_data/proj_67916afd/: metadata.json
backend/sample_data/proj_67916afd/generations/gen_ac20dd7f63/: status.json
src/services/: cache\backup\temp\cache.cache  cache\backup\temp\index.cfg  cache\backup\temp\snapshot.json
